tests/assets/test_suites/w3c_wsdl20/documents/good/ImportedWSDL-1G/retrieveDetails.wsdl
<?xml version="1.0" encoding="utf-8" ?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/ImportedWSDL-1G/retrieveDetails.wsdl -->
<!-- Copyright © 2007-03-23 05:50 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<description xmlns="http://www.w3.org/ns/wsdl"
	targetNamespace="http://greath.example.com/2004/services/retrieveDetails"
	xmlns:tns="http://greath.example.com/2004/services/retrieveDetails"
	xmlns:wdetails="http://greath.example.com/2004/schemas/reservationDetails"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<documentation>
		This document describes the GreatH Retrieve Reservation Details
		Web service.
	</documentation>

	<types>
		<xs:schema xmlns="http://www.w3.org/2001/XMLSchema"
			targetNamespace="http://greath.example.com/2004/schemas/reservationDetails">

			<xs:element name="reservationDetails">
				<xs:complexType>
					<xs:sequence>
						<xs:element name="confirmationNumber"
							type="string" />
						<xs:element name="checkInDate" type="date" />
						<xs:element name="checkOutDate" type="date" />
						<xs:element name="roomType" type="string" />
						<xs:element name="smoking" type="boolean" />
					</xs:sequence>
				</xs:complexType>
			</xs:element>
		</xs:schema>
	</types>

	<interface name="retrieveDetailsInterface">

		<operation name="retrieve"
			pattern="http://www.w3.org/ns/wsdl/in-out">
			<input messageLabel="In" element="#none" />
			<output messageLabel="Out"
				element="wdetails:reservationDetails" />
		</operation>

	</interface>

</description>
