tests/assets/test_suites/w3c_wsdl20/documents/bad/Multipart-7B/multipartstyleinonly.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/Multipart-7B/multipartstyleinonly.wsdl -->
<!-- Copyright © 2007-03-23 05:52 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema"
	xmlns:tns="http://example.org/">

	<wsdl:documentation>
		This test shows an invalid use of a WSDL 2.0 interface with multipart style
		and in-only MEP. The sequence of the first interface message reference contains
		an element with maxOccurs != 1.
		
		This test violates assertion MultipartStyle-2060.
	</wsdl:documentation>
	
	<wsdl:types>
		<xs:schema targetNamespace="http://example.org/">
			<xs:element name="myOperation">
				<xs:complexType>
					<xs:sequence>
						<xs:element name="element1" type="xs:string" maxOccurs="unbounded"/>
					</xs:sequence>
				</xs:complexType>
			</xs:element>
		</xs:schema>
	</wsdl:types>

	<wsdl:interface name="myInterface"
		styleDefault="http://www.w3.org/ns/wsdl/style/multipart">
		<wsdl:operation name="myOperation"
			pattern="http://www.w3.org/ns/wsdl/in-only">
			<wsdl:input messageLabel="In" element="tns:myOperation" />
		</wsdl:operation>
	</wsdl:interface>
</wsdl:description>
